turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: type mismatch;
 found   : Unit
 required: Boolean
      if (rule(i) = 'R') {
                  ^